# 2024-ACCA

./: readME.md  text.txt
Localization-Controller-Team/src/erp42/erp42_communication/: CMakeLists.txt
Localization-Controller-Team/src/erp42/erp42_communication/launch/: erp42.launch.py
Localization-Controller-Team/src/erp42/erp42_communication/src/: erp42_serial.py
Localization-Controller-Team/src/erp42/erp42_control/: CMakeLists.txt  package.xml
Localization-Controller-Team/src/erp42/erp42_control/msg/: ControlMessage.msg  State.msg
Localization-Controller-Team/src/erp42/erp42_control/src/: cone_tracking_controller.py  controller_2023.py  global_driving1.py  global_driving2.py  path_opener1.py  path_opener2.py  path_selector.py  pid.py  pid_tuner.py  rotate_yaw_new.py  stanley.py  stanley_bs_ts_D.py  stanley_controller.py  state_publisher.py
Localization-Controller-Team/src/erp42/erp42_msgs/: CMakeLists.txt  package.xml
Localization-Controller-Team/src/erp42/erp42_msgs/msg/: SerialFeedBack.msg
Localization-Controller-Team/src/localization/localization/: CMakeLists.txt  package.xml
Localization-Controller-Team/src/localization/localization/launch/: localization.launch  navsat_transform.launch
Localization-Controller-Team/src/localization/localization/launch/config/: robot.urdf.xacro  rviz.rviz
Localization-Controller-Team/src/localization/localization/msg/: Measurement.msg
Localization-Controller-Team/src/localization/localization/params/: param_ekf.yaml  param_ekf3.yaml  param_navsat.yaml
Localization-Controller-Team/src/localization/localization/src/: erp_twist.py  gjs.py  gjs_erp.py  gps_odometry.py  imu_odometry.py  kalman.py  ndt_odometry.py  rotate_yaw.py  rotate_yaw_o.py  test.py
Localization-Controller-Team/src/sensor/ntrip_ros/: CMakeLists.txt
Localization-Controller-Team/src/sensor/ntrip_ros/launch/: ntrip_ros.launch
Localization-Controller-Team/src/sensor/ntrip_ros/scripts/: ntripclient.py  ntripclient2.py
